# AI-Powered-Todo

./: .coverage  .dockerignore  .env.example  .gitignore  .mcp.json  00_GEMINI_SETUP_INDEX.md  00_START_HERE.md  404.html  AGENT_QUICK_REFERENCE.md  AGENT_SETUP_SUMMARY.md  AUTO_LOGIN_REGISTRATION_FIX.md  BACKEND_GEMINI_CONFIG.md  BACKEND_QUICK_REFERENCE.txt  BACKEND_SETUP_COMPLETE.md  BEFORE_AFTER_COMPARISON.md  CODE_REVIEW.md  CODE_REVIEW_AI_SERVICE.md  CODE_REVIEW_FIXES_APPLIED.md  CODE_REVIEW_GEMINI_ONLY_UPDATE.md  COMPLETION_CERTIFICATE.md  COMPLETION_SUMMARY.md  CONVERSION_SUMMARY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_CONFIG_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICK_START.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  ERROR_FIXES_APPLIED.md  FINAL_VERIFICATION_GEMINI_ONLY.md  FRONTEND_BACKEND_SETUP.md  FULLSTACK_ARCHITECTURE.md  GEMINI_FINAL_SOLUTION.md  GEMINI_FIXES_SUMMARY.md  GEMINI_INTEGRATION_SUMMARY.md  GEMINI_INTEGRATION_VERIFIED.md  GEMINI_ONLY_CONFIGURATION.md  GEMINI_OPENAI_AGENTS_SETUP.md  GEMINI_QUICK_START.md  GITHUB_PAGES_SETUP.md  (+34 more)
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy-github-pages.yml
.specify/memory/: constitution.md
404/: index.html
_next/static/chunks/: 1d1665cfd19b9ddf.js  32edcd80be6606f8.js  55c8f08adc39643e.js  5e0a8bf71723929f.js  73fc39eca167bcc0.js  7a93c4902607d032.js  874f53b1333ea552.js  8ea277b5e9d0c381.js  901417d72ca0a187.css  99b9f75a3bbe0ca8.js  b3597db882b3b2c8.js  c2cf3a67e8deccad.js  c6a8e81f610a684e.js  f8fd77890d3f5725.js  fb48b144fd15b960.js  (+2 more)
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt
_not-found/__next._not-found/: __PAGE__.txt
auth/login/: __next._tree.txt  __next.auth.txt  index.html  index.txt
auth/register/: __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
backend/: .env.example  .env.production  .vercelignore  CHANGES_SUMMARY.txt  ENV_SETUP_GUIDE.md  REACT_NATIVE_SETUP.md  README.md  TEST_EMAIL_VALIDATION.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT_NOTES.md  package.json  pyproject.toml  requirements-minimal.txt  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: config.py  dependencies.py  main.py  simple_main.py
backend/app/agents/: __init__.py  agent.py  gemini_client.py  openrouter_client.py  tools.py
backend/app/api/: __init__.py  agent.py  auth.py  simple_tasks.py  tasks.py
backend/app/database/: __init__.py  session.py  simple_session.py
backend/app/database/migrations/: alembic.ini  env.py
backend/app/database/migrations/versions/: 001_initial_schema.py
backend/app/models/: __init__.py  base.py  simple_task.py  task.py  task_share.py  user.py
backend/app/schemas/: __init__.py  shared.py  simple_task.py  task.py  user.py
backend/app/services/: __init__.py  ai_service.py  auth_service.py  simple_task_service.py  task_service.py  user_service.py
backend/app/utils/: __init__.py  decorators.py  exceptions.py  logger.py  response.py
backend/tests/: __init__.py  conftest.py  test_auth_api.py  test_task_api.py
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py
dashboard/: __next._head.txt  __next._tree.txt  __next.dashboard.txt  index.html  index.txt
dashboard/__next.dashboard/: __PAGE__.txt
frontend/: .env.example  .env.production  .vercelignore  REDUX_PERSIST_SETUP.md  TSCONFIG_FIX.md  VALIDATIONS_SETUP.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthModal.tsx  ChatBot.tsx  FormField.tsx  LoginModal.tsx  NewTaskModal.tsx  SignupModal.tsx
frontend/utils/: sanitize.ts
specs/001-todo-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fullstack-ai-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/todo_cli/: __init__.py  __main__.py  cli.py  commands.py  db_store.py  main.py  models.py  store.py
tests/: __init__.py  test_cli.py  test_commands.py  test_models.py  test_store.py
(+38 files in other folders)
