[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo-cli"
version = "0.1.0"
description = "Simple command-line todo application with in-memory storage, comprehensive documentation, and colorful output"
authors = [
    { name = "Development Team", email = "dev@todo-cli.local" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"

[project.scripts]
todo = "todo_cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "8.0"
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "D", "B", "A"]
ignore = ["D100", "D101", "D102", "D103", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
